apps/mern/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mern
  labels:
    app.kubernetes.io/name: mern
    app.kubernetes.io/part-of: mern-stack
