apps/mern/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: mern
  labels:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/part-of: mern-stack
spec:
  serviceName: mongodb-headless
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/part-of: mern-stack
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
        app.kubernetes.io/part-of: mern-stack
    spec:
      securityContext:
        runAsNonRoot: false
        runAsUser: 0
      containers:
        - name: mongodb
          image: mongo:6.0
          imagePullPolicy: IfNotPresent
          args:
            - "--bind_ip_all"
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: data
              mountPath: /data/db
          
          securityContext:
            runAsNonRoot: false
            runAsUser: 0
            allowPrivilegeEscalation: true
          readinessProbe:
            tcpSocket:
              port: mongodb
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: mongodb
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 200m
              memory: 700Mi
            limits:
              cpu: 400m
              memory: 1Gi
      terminationGracePeriodSeconds: 60
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mongodb-pvc-gp2
