apps/mern/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless
  namespace: mern
  labels:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/part-of: mern
spec:
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: mongodb
  selector:
    app.kubernetes.io/name: mongodb
