apps/mern/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-ingress
  namespace: mern
  labels:
    app.kubernetes.io/name: mern-ingress
    app.kubernetes.io/part-of: mern-stack
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /api/healthz
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=false
    # Public subnet IDs where the ALB will be created (comma-separated)
    alb.ingress.kubernetes.io/subnets: "subnet-0da0f5edbd4b7d826,subnet-07495dbc349096b2e"
    # Using HTTP only for now; add certificate arn and HTTPS listen-port if you want HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mern-backend
                port:
                  number: 3000
